[build-system]
requires = ["setuptools>=64", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "doosan_drfl"
version = "1.0"
description = "Python bindings for the Doosan Robot Framework Library (DRFL)"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pybind11-stubgen"]

[tool.setuptools.packages.find]
where = ["."]
include = ["drfl*"]

[tool.setuptools.package-data]
"*" = ["*.pyi", "*.so", "*.dll", "*.pyd"]
